# pymascdb

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  SECURITY.md  api.py  environment.yml  example.py  examples  pyproject.toml  script_examples.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: performance.md
.github/workflows/: tests.yml
app/: mascdb_app.py
ci/: environment.yml
dev/: design_idea.py  script_examples.py
docs/: README.md  conf.py  environment.yaml  requirements.txt
docs/old_source/: cam.rst  conf.py  download.rst  examples.rst  index.rst  mascdb.rst  reference.rst  triplet.rst
docs/old_source/examples/: 00_basic_funcs.ipynb  01_retrievals.ipynb  02_classification.ipynb  03_snowflake_images.ipynb
docs/source/: .conf.py.swp  cam.rst  conf.py  data.rst  data_content_triplet.rst  datacontent.rst  download.rst  examples.rst  index.rst  installation.rst  maintainers_guidelines.rst  mascdb.rst  reference.rst  triplet.rst  zarr.rst
docs/source/_static/: style.css
docs/source/api/: mascdb.rst  modules.rst
docs/source/examples/: 00_basic_funcs.ipynb  01_retrievals.ipynb  02_classification.ipynb  03_snowflake_images.ipynb
experiments/: 01_latent_manifold_exploration.py  02_som_clustering.py
generator/: TODO-database-generator.txt  create_zarr_store.py  masc_triplet_files.py  mat_files.py  weather_data.py
mascdb/: __init__.py  api.py  aux.py  pd_sns_accessor.py  utils_aux.py  utils_env.py  utils_event.py  utils_figs.py  utils_img.py
mascdb/tests/: test_dummy.py
reader/: database_reader.py  examples_database.ipynb
tutorial/: 00_download_mascdb.py  01_data_manipulation.py  02_classification.ipynb  02_eda.py  03_image_processing.py  07_orientation.py  LatentManifold.py  SOM_Clustering.py
tutorials/: 00_basic_funcs.ipynb  01_retrievals.ipynb  02_classification.ipynb  03_snowflake_images.ipynb
